--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.epsi</groupId>
-	<!-- artifactId correspond au nom de votre application, 
-	n'hésitez pas à changer la valeur par défaut -->
+	<!-- artifactId correspond au nom de votre application, n'hésitez pas à 
+		changer la valeur par défaut -->
 	<artifactId>mvc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -32,34 +32,40 @@
 			<groupId>org.apache.tomee</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0-1</version>
-			<!-- le scope provided indique que cette dépendance sera fournie
-			pour le serveur à l'exécution -->
+			<!-- le scope provided indique que cette dépendance sera fournie pour 
+				le serveur à l'exécution -->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
-			<!-- le scope provided indique que cette dépendance sera fournie
-			pour le serveur à l'exécution -->
+			<!-- le scope provided indique que cette dépendance sera fournie pour 
+				le serveur à l'exécution -->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
 			<artifactId>myfaces-api</artifactId>
 			<version>2.2.11</version>
-			<!-- le scope provided indique que cette dépendance sera fournie
-			pour le serveur à l'exécution -->
+			<!-- le scope provided indique que cette dépendance sera fournie pour 
+				le serveur à l'exécution -->
 			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<!-- le plugin pour démarrer TomEE depuis la ligne de commande avec maven : 
-				       mvn package tomee:run
-				-->
+				<!-- le plugin pour démarrer TomEE depuis la ligne de commande avec maven 
+					: mvn package tomee:run -->
 				<groupId>org.apache.tomee.maven</groupId>
 				<artifactId>tomee-maven-plugin</artifactId>
 				<version>7.0.2</version>
